# conways_game_of_life

./: CMakeLists.txt  Life  a.out  constants.h  functions.c  globals.h  main.c  prototypes.h  structs.h
